2008-08-28  Cosimo Cecchi  <cosimoc@gnome.org>

	* Makefile.am:
	* gnome-screenshot.c: (main):
	* gnome-screenshot.glade:
	* gnome-screenshot.ui:
	* screenshot-dialog.c: (screenshot_dialog_new),
	(screenshot_dialog_enable_dnd), (screenshot_dialog_get_toplevel):
	* screenshot-dialog.h:
	Drop libglade dependency. Use GtkBuilder instead (#549700).

2008-08-28  Emmanuele Bassi  <ebassi@gnome.org>

	Bug 549667 – crash in shape code

	* screenshot-utils.c (screenshot_get_pixbuf): Check the returned
	value for XShapeGetRectangles(). (Matthias Clasen)

2008-08-25  Cosimo Cecchi  <cosimoc@gnome.org>

	* Makefile.am: Leftover from the Gdk port: remove $(XFIXES_LIBS)
	from LDADD.

2008-08-25  Cosimo Cecchi  <cosimoc@gnome.org>

	* screenshot-save.c: (clean_up_temporary_dir),
	(read_pipe_from_child):	Fix some warnings due to missing string
	format placeholders. 

2008-08-10  Emmanuele Bassi  <ebassi@gnome.org>

	Bug 434580 – gnome-screenshot does not remember user settings

	* gnome-screenshot.c:
	* gnome-screenshot.schemas.in: Save the user settings after
	the screenshot has been taken. (Elliott Hughes)

2008-08-10  Emmanuele Bassi  <ebassi@gnome.org>

	Bug 454689 – Messages in the gnome-screenshot --help output
	are not all translated

	* gnome-screenshot.c (main): Remove the useless option group
	and allow the translation of the application options. (Gabor
	Kelemen)

2008-08-10  Emmanuele Bassi  <ebassi@gnome.org>

	Bug 521799 – Use PNG standard keyword

	* screenshot-save.c (screenshot_save_start): Use the standard
	"Software" keyword and update the name of the program. (Felix
	Riemann)

2008-08-10  Emmanuele Bassi  <ebassi@gnome.org>

	Bug 515179 – F1 does not display help in interactive dialogue

	* gnome-screenshot.c:
	(key_press_cb), (create_interactive_dialog): Show help in the
	interactive dialog when pressing F1. (Alexander Gnodtke)

2008-07-27  Vincent Untz  <vuntz@gnome.org>

	* gnome-screenshot.c: (target_toggled_cb), (create_effects_frame):